# Jodd-public

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README-PREP.md  README.md  RELEASE.md  SECURITY.md  TODO.md  dev.ps1  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json
.github/workflows/: release.yml
docs/: DATA-HANDLING.md  DISTRIBUTION.md  GMAIL-SYNC.md
scripts/: sync-to-public.sh
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  auth.rs  db.rs  gmail.rs  lib.rs  main.rs
src/lib/: types.ts
src/lib/components/: AccountSettings.svelte  AuthScreen.svelte  DupReviewModal.svelte  NoteContextMenu.svelte  NoteEditor.svelte  NoteList.svelte  Sidebar.svelte
src/lib/stores/: notes.ts
